kubernetes/hello-page-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-page-service
spec:
  selector:
    app: HelloPageService
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7000
