kubernetes/hello-page.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-page-service
spec:
  selector:
    app: HelloPageService
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-page-deployment
  labels:
    app: HelloPageDeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: HelloPageService
  template:
    metadata:
      labels:
        app: HelloPageService
    spec:
      containers:
      - name: hello-page-service
        image: 'hello-page-service'
        imagePullPolicy: Never # allows using the local registry
        ports:
        - containerPort: 80
