kubernetes/hello-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    app: HelloService
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
