kubernetes/hello.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-service
spec:
  selector:
    app: HelloService
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-deployment
  labels:
    app: HelloDeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: HelloService
  template:
    metadata:
      labels:
        app: HelloService
    spec:
      containers:
      - name: hello-service
        image: 'hello-service'
        imagePullPolicy: Never  # allows using the local registry
        ports:
        - containerPort: 8000
