kubernetes/page-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: page-service
spec:
  selector:
    app: PageService
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
