kubernetes/page.yaml
kind: Service
apiVersion: v1
metadata:
  name: page-service
spec:
  selector:
    app: PageService
  ports:
  - protocol: TCP
    port: 80
    targetPort: 9000
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: page-deployment
  labels:
    app: PageDeployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: PageService
  template:
    metadata:
      labels:
        app: PageService
    spec:
      containers:
      - name: page-service
        image: 'page-service'
        imagePullPolicy: Never  # allows using the local registry
        ports:
        - containerPort: 80
